[project]
name = "kryptografia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=46.0.3",
    "fastapi>=0.128.0",
    "hvac>=2.4.0",
    "mitmproxy>=12.2.1",
    "pyjwt>=2.10.1",
    "pyotp>=2.9.0",
    "uvicorn>=0.40.0",
]
